add GC logs for ELS